added server side rendering

--- a/private/layout.html
+++ b/private/layout.html
@@ -6,10 +6,13 @@
     </style>
   </head>
   <body>
-    <div>
+    <div id='content'>
       {{> Template.dynamic template=template data=data}}
     </div>
     
+    <p class="notice">
+      This page is generated in the server and served as HTML.
+    </p>
     <div id="add">
       <a href="https://github.com/arunoda/meteor-ssr-demo-page-rendering">Get Source</a> <br>
       <a class="small" href="https://bulletproofmeteor.com/">Sponsored by BulletProof Meteor :D</a>
