using picker for routing

--- a/client/layout.html
+++ b/client/layout.html
@@ -4,10 +4,10 @@
   </div>
   
   <p class="notice">
-  To render the page on the server, append <code>?_escaped_fragment_=</code> to the end of the URL and reload.
+  To render the page on the server, append <a id="ssr-link" href="#"><code>?_escaped_fragment_=</code></a> to the end of the URL and reload.
   </p>
   <div id="add">
-    <a href="https://github.com/arunoda/meteor-ssr-demo-page-rendering">Get Source</a> <br>
+    <a href="https://github.com/arunoda/meteor-seo-without-spiderable">Get Source</a> <br>
     <a class="small" href="https://bulletproofmeteor.com/">Sponsored by BulletProof Meteor :D</a>
   </div>
 </template>
