--- a/private/home.html
+++ b/private/home.html
@@ -4,6 +4,6 @@
 
 <ul>
   {{#each posts}}
-    <a href="/singlepost"><li>{{name}}</li></a>
+    <a href="/post/{{_id}}"><li>{{name}}</li></a>
   {{/each}}
 </ul>
